--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,6 +26,9 @@ jobs:
         go build -v .
         go vet ./...
   
-    - name: Lint
+    - name: Format
       uses: sjkaliski/go-github-actions/fmt@v0.5.0
+    
+    - name: Lint
+      uses: sjkaliski/go-github-actions/lint@v0.5.0
       
