--- a/.github/workflows/lint_build.yaml
+++ b/.github/workflows/lint_build.yaml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.9"
+      - uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
 
       - uses: pre-commit/action@v2.0.3
         with:
@@ -35,7 +38,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          go-version: 1.13
+          go-version: 1.17
 
       - name: Build
         run: |
